# scrape-zalando

./: .gitignore  Article.ipynb  README.md  docker-compose.yml  pyproject.toml  scrape.jsonl
.github/workflows/: notebook-to-md.yml
markdowns/: Article.md
templates/: keep_html.tpl
